# MatrixTemplate

./: CMakeLists.txt  Matrix.h  MatrixException.h  README.md  index_exception.h  main.cpp  math_exception.h
tests/: CMakeLists.txt  OperatorTests.cpp  runAllTests.cpp
tests/lib/: README.md
